--- a/src/app/components/activity/activity-map/activity-map.component.css
+++ b/src/app/components/activity/activity-map/activity-map.component.css
@@ -7,6 +7,7 @@
   .search-bar {
     position: absolute;
     margin-top: 10px;
+    margin-bottom: 10px;
     z-index: 1000;
     display: flex;
     gap: 10px;
