--- a/src/app/components/frontpage/frontpage.component.html
+++ b/src/app/components/frontpage/frontpage.component.html
@@ -1,15 +1,108 @@
 <main role="main">
-    <div class="text-center mb-5">
-        <img 
-            src="https://marketplace.canva.com/EAED_WYebUA/2/0/1600w/canva-explore-brush-script-photo-facebook-cover-nmLQj7f0bVU.jpg" 
-            alt="Workout Image" 
-            class="img-fluid rounded shadow"
-            style="max-height: 600px; object-fit: cover; width: 100%; border-radius: 10px;">
-        <div class="hero-content" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
-            <h1 class="display-4 mt-4 text-dark font-weight-bold">Welkom bij GezelligTijd</h1>
-            <p class="lead text-dark">Een platform of met andere in de buurt te socialiseren</p>
-            <a href="#aanmelden" class="btn btn-danger btn-lg">Aanmelden</a>
-            <a routerLink="about" class="btn btn-light btn-lg ml-3">Over ons</a>
+    <div class="container">
+        <div class="text-center mb-5" style="position: relative;">
+            <img 
+                src="../../../assets/websitebanner.jpg" 
+                alt="Workout Image" 
+                class="img-fluid rounded shadow"
+                style="max-height: 600px; object-fit: cover; width: 100%; border-radius: 10px;">
+            <div class="hero-content" 
+                style="position: absolute; bottom: 100px; left: 40px;">
+                <div class="aanmelden" style="display: inline-block; margin-right: 10px;">
+                    <a href="#aanmelden" class="btn btn-primary btn-lg">Aanmelden</a>
+                </div>
+                <a routerLink="about" class="btn btn-light btn-lg ml-3">Over ons</a>
+            </div>
         </div>
+        <div class="mediacontainer">
+            <div class="row">
+                <div class="col-lg-4">
+                    <img 
+                    src="../../../assets/Schermafbeelding 2025-01-13 134244.png" 
+                    alt="Image 1" 
+                    class="bd-placeholder-img rounded-circle" 
+                    style="width: 140px; height: 140px; object-fit: cover; align-items: center;">
+                  <h2 class="fw-normal">Heading</h2>
+                  <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
+                  <p><a class="btn btn-secondary" href="#">View details »</a></p>
+                </div><!-- /.col-lg-4 -->
+                <div class="col-lg-4">
+                    <img 
+                    src="../../../assets/Schermafbeelding 2025-01-13 134309.png" 
+                    alt="Image 1" 
+                    class="bd-placeholder-img rounded-circle" 
+                    style="width: 140px; height: 140px; object-fit: cover; align-items: center;">
+                  <h2 class="fw-normal">Heading</h2>
+                  <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.
+                  </p>
+                  <p><a class="btn btn-secondary" href="#">View details »</a></p>
+                </div><!-- /.col-lg-4 -->
+                <div class="col-lg-4">
+                    <img 
+                    src="../../../assets/Schermafbeelding 2025-01-13 134407.png" 
+                    alt="Image 1" 
+                    class="bd-placeholder-img rounded-circle" 
+                    style="width: 140px; height: 140px; object-fit: cover; align-items: center;">
+                  <h2 class="fw-normal">Heading</h2>
+                  <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.
+
+
+                  </p>
+                  <p><a class="btn btn-secondary" href="#">View details »</a></p>
+                </div>    
+              </div>
+              <hr class="featurette-divider">
+              <div class="row featurette">
+                <div class="col-md-7">
+                  <h2 class="featurette-heading fw-normal lh-1">First featurette heading. <span class="text-body-secondary">It’ll blow your mind.</span></h2>
+                  <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+                </div>
+                <div class="col-md-5">
+                    <img 
+                    src="../../../assets/StockCake-Interactive Board Game_1736780255.jpg" 
+                    alt="Default Image" 
+                    class="featurette-image default-image" width="500px" height="500px">
+                </div>
+              </div>
+              <hr class="featurette-divider">
+              <div class="row featurette">
+                <div class="col-md-7 order-md-2">
+                  <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-body-secondary">See for yourself.</span></h2>
+                  <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+                </div>
+                <div class="col-md-5 order-md-1">
+                    <img 
+                    src="../../../assets/asjdalfijweofkje0ijerivj90if32ifipoasjdfoijf.jpg" 
+                    alt="Default Image" 
+                    class="featurette-image default-image" width="500px" height="500px">
+                </div>
+              </div>
+              <hr class="featurette-divider">
+              <div class="row featurette">
+                <div class="col-md-7">
+                    <h2 class="featurette-heading fw-normal lh-1">
+                        And lastly, this one. <span class="text-body-secondary">Checkmate.</span>
+                    </h2>
+                    <p class="lead">
+                        And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.
+                    </p>
+                </div>
+                <div class="col-md-5">
+                    <div class="hover-image-container">
+                        <img 
+                            src="../../../assets/Schermafbeelding 2025-01-13 150907.png" 
+                            alt="Default Image" 
+                            class="featurette-image1 default-image">
+                        <img 
+                            src="../../../assets/breda1233333.jpg" 
+                            alt="Hovered Image" 
+                            class="featurette-image1 hover-image">
+                    </div>
+                </div>
+            </div>
+            
+            
+              <hr class="featurette-divider">
+        </div>  
     </div>
 </main>
