--- a/src/app/components/auth/register/register.component.html
+++ b/src/app/components/auth/register/register.component.html
@@ -1,1 +1,93 @@
-<p>register works!</p>
+<div class="form-group">
+    <label for="email">Email</label>
+    <input
+      type="email"
+      id="email"
+      class="form-control"
+      required
+      [(ngModel)]="user.email"
+      name="email"
+    />
+  </div>
+  
+  <div class="form-group">
+    <label for="password">Password</label>
+    <input
+      type="password"
+      id="password"
+      class="form-control"
+      required
+      [(ngModel)]="user.password"
+      name="password"
+    />
+  </div>
+  
+  <div class="form-group">
+    <label for="confirmPassword">Confirm Password</label>
+    <input
+      type="password"
+      id="confirmPassword"
+      class="form-control"
+      required
+      [(ngModel)]="user.confirmPassword"
+      name="confirmPassword"
+    />
+  </div>
+  
+  <div class="form-group">
+    <label for="name">Name</label>
+    <input
+      type="text"
+      id="name"
+      class="form-control"
+      required
+      [(ngModel)]="user.name"
+      name="name"
+    />
+  </div>
+  
+  <div class="form-group">
+    <label for="birthdate">Birthdate</label>
+    <input
+      type="date"
+      id="birthdate"
+      class="form-control"
+      required
+      [(ngModel)]="user.birthdate"
+      name="birthdate"
+    />
+  </div>
+  
+  <div class="form-group">
+    <label for="biography">Biography</label>
+    <textarea
+      id="biography"
+      class="form-control"
+      required
+      [(ngModel)]="user.biography"
+      name="biography"
+    ></textarea>
+  </div>
+  
+  <div class="form-group">
+    <label for="phoneNumber">Phone Number</label>
+    <input
+      type="tel"
+      id="phoneNumber"
+      class="form-control"
+      required
+      [(ngModel)]="user.phoneNumber"
+      name="phoneNumber"
+    />
+  </div>
+  
+  <div class="form-group text-center">
+    <button
+      class="btn btn-primary"
+      [disabled]="isLoading"
+      (click)="onRegister()"
+    >
+      Register
+    </button>
+  </div>
+  
