--- a/src/app/components/auth/register/register.component.html
+++ b/src/app/components/auth/register/register.component.html
@@ -11,7 +11,7 @@
   </div>
   
   <div class="form-group">
-    <label for="password">Password</label>
+    <label for="password">Wachtwoord</label>
     <input
       type="password"
       id="password"
@@ -23,7 +23,7 @@
   </div>
   
   <div class="form-group">
-    <label for="confirmPassword">Confirm Password</label>
+    <label for="confirmPassword">Bevestig wachtwoord</label>
     <input
       type="password"
       id="confirmPassword"
@@ -35,7 +35,7 @@
   </div>
   
   <div class="form-group">
-    <label for="name">Name</label>
+    <label for="name">Naam</label>
     <input
       type="text"
       id="name"
@@ -47,7 +47,7 @@
   </div>
   
   <div class="form-group">
-    <label for="birthdate">Birthdate</label>
+    <label for="birthdate">Geboortedatum</label>
     <input
       type="date"
       id="birthdate"
@@ -59,7 +59,7 @@
   </div>
   
   <div class="form-group">
-    <label for="biography">Biography</label>
+    <label for="biography">Biografie</label>
     <textarea
       id="biography"
       class="form-control"
@@ -70,7 +70,7 @@
   </div>
   
   <div class="form-group">
-    <label for="phoneNumber">Phone Number</label>
+    <label for="phoneNumber">Telefoon nummer</label>
     <input
       type="tel"
       id="phoneNumber"
@@ -87,7 +87,7 @@
       [disabled]="isLoading"
       (click)="onRegister()"
     >
-      Register
+      registreer
     </button>
   </div>
   
