--- a/src/app/components/frontpage/frontpage.component.html
+++ b/src/app/components/frontpage/frontpage.component.html
@@ -1,19 +1,26 @@
 <main role="main">
     <div class="container">
-        <div class="text-center mb-5" style="position: relative;">
-            <img 
-                src="../../../assets/websitebanner.jpg" 
-                alt="Workout Image" 
-                class="img-fluid rounded shadow"
-                style="max-height: 600px; object-fit: cover; width: 100%; border-radius: 10px;">
-            <div class="hero-content" 
-                style="position: absolute; bottom: 100px; left: 40px;">
-                <div class="aanmelden" style="display: inline-block; margin-right: 10px;">
-                    <a href="#aanmelden" class="btn btn-primary btn-lg">Aanmelden</a>
-                </div>
-                <a routerLink="about" class="btn btn-light btn-lg ml-3">Over ons</a>
-            </div>
+      <div class="text-center mb-5 position-relative">
+        <img 
+          src="../../../assets/websitebanner.jpg" 
+          alt="Frontpage Image" 
+          class="img-fluid rounded shadow"
+          style="max-height: 600px; object-fit: cover; width: 100%; border-radius: 10px;">
+        
+        <div class="hero-content position-absolute" 
+             style="bottom: 100px; left: 40px;">
+          <a href="#aanmelden" 
+             class="btn btn-lg" 
+             style="background-color: #3E7056; color: white; margin-right: 10px;">
+            Aanmelden
+          </a>
+          <a routerLink="about" 
+             class="btn btn-light btn-lg ml-3">
+            Over ons
+          </a>
         </div>
+      </div>
+      
         <div class="mediacontainer">
             <div class="row">
                 <div class="col-lg-4">
@@ -24,7 +31,9 @@
                     style="width: 140px; height: 140px; object-fit: cover; align-items: center;">
                   <h2 class="fw-normal">Petra Bakker</h2>
                   <p>Een echte aanrader!</p>
-                  <p><a class="btn btn-secondary" href="#">bekijk profiel »</a></p>
+                  <p><a class="btn btn-secondary" 
+                        href="#"
+                        style="background-color: #3E7056; color: white;">bekijk profiel »</a></p>
                 </div><!-- /.col-lg-4 -->
                 <div class="col-lg-4">
                     <img 
@@ -35,7 +44,9 @@
                   <h2 class="fw-normal">Dirk Kort</h2>
                   <p>Veel nieuwe vrienden leren kennen.
                   </p>
-                  <p><a class="btn btn-secondary" href="#">bekijk profiel »</a></p>
+                  <p><a class="btn btn-secondary" 
+                    href="#"
+                    style="background-color: #3E7056; color: white;">bekijk profiel »</a></p>
                 </div><!-- /.col-lg-4 -->
                 <div class="col-lg-4">
                     <img 
@@ -45,10 +56,10 @@
                     style="width: 140px; height: 140px; object-fit: cover; align-items: center;">
                   <h2 class="fw-normal">Jolanda de Jong</h2>
                   <p>altijd een gezellige avond via deze app.
-
-
                   </p>
-                  <p><a class="btn btn-secondary" href="#">bekijk profiel »</a></p>
+                  <p><a class="btn btn-secondary" 
+                    href="#"
+                    style="background-color: #3E7056; color: white;">bekijk profiel »</a></p>
                 </div>    
               </div>
               <hr class="featurette-divider">
