--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -21,17 +21,24 @@
         <li class="nav-item" style="border-right: 1px solid rgba(255, 255, 255, 0.5); padding-right: 15px; margin-right: 15px;">
           <a routerLink="frontpage" class="nav-link px-3 fs-4 fw-bold" 
              style="color: #ffffff; text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);">
-            sociaal
+            Sociaal
+          </a>
+        </li>
+
+        <li *ngIf="(loggedInUser$ | async);" class="nav-item" style="border-right: 1px solid rgba(255, 255, 255, 0.5); padding-right: 15px; margin-right: 15px;">
+          <a routerLink="my-activities" class="nav-link px-3 fs-4 fw-bold" 
+             style="color: #ffffff; text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);">
+            Deelnames
           </a>
         </li>
       </ul>
 
-      <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 position-relative">
+      <!-- <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 position-relative">
         <input type="search" class="form-control border-0 shadow-sm rounded-pill ps-4" placeholder="Zoeken..." aria-label="Search">
         <span class="position-absolute top-50 end-0 translate-middle-y me-3">
           <i class="bi bi-search"></i>
         </span>
-      </form>
+      </form> -->
 
       <div *ngIf="!(loggedInUser$ | async); else loggedIn" class="d-flex align-items-center">
         <a routerLink="/login" class="btn btn-outline-light me-2">Login</a>
