--- a/src/app/components/activity/activity-create/activity-create.component.html
+++ b/src/app/components/activity/activity-create/activity-create.component.html
@@ -1,5 +1,19 @@
 <div class="container-fluid px-5 my-5">
   <div class="row justify-content-center">
+    <div *ngIf="successMessage" class="success-container">
+      <div class="success-message">
+        {{ successMessage }}
+        <button class="close-button" (click)="clearMessages()">✕</button>
+      </div>
+    </div>
+    <!-- Error Message Block -->
+    <div *ngIf="errorMessage" class="error-container">
+      <div class="error-message">
+        {{ errorMessage }}
+        <button class="close-button" (click)="clearError()">✕</button>
+      </div>
+    </div>
+
     <div class="col-xl-10">
       <div class="card border-0 rounded-3 shadow-lg overflow-hidden">
         <div class="card-body p-0">
