--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -17,7 +17,7 @@
         >
           <!-- Email Input -->
           <div class="form-group">
-            <label for="inputEmail">Email address</label>
+            <label for="inputEmail">Emailadres</label>
             <input
               type="email"
               class="form-control"
@@ -37,13 +37,13 @@
               "
               class="invalid-feedback"
             >
-              <p id="email-invalid">Please enter a valid email address</p>
+              <p id="email-invalid">Vul een geldig email in. Denk aan '@' en '.com/.nl'!</p>
             </span>
           </div>
 
           <!-- Password Input -->
           <div class="form-group">
-            <label for="inputPassword">Password</label>
+            <label for="inputPassword">Wachtwoord</label>
             <input
               type="password"
               class="form-control"
@@ -62,7 +62,7 @@
               "
               class="invalid-feedback"
             >
-              <p id="password-invalid">Please enter a valid password</p>
+              <p id="password-invalid">Vul een geldig wachtwoord in!</p>
             </span>
           </div>
 
