added ux to reister and translate still needs testing

--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -37,7 +37,7 @@
               "
               class="invalid-feedback"
             >
-              <p id="email-invalid">Vul een geldig email in. Denk aan '@' en '.com/.nl'!</p>
+              <p id="email-invalid">Vul een geldig email in. Denk aan &#64; en '.com/.nl'!</p>
             </span>
           </div>
 
