--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -49,7 +49,7 @@
 
       <ng-template #loggedIn>
         <div class="d-flex align-items-center gap-2">
-          <a routerLink="users" class="btn btn-outline-light">
+          <a routerLink="profile" class="btn btn-outline-light">
             <i class="bi bi-person-circle me-1"></i> Profiel
           </a>
           <button class="btn" (click)="logout()"  style="background-color: #3E7056; color: white;">
