About page added

--- a/src/app/components/frontpage/frontpage.component.html
+++ b/src/app/components/frontpage/frontpage.component.html
@@ -14,7 +14,7 @@
              style="background-color: #3E7056; color: white; margin-right: 10px;">
             Aanmelden
           </a>
-          <a routerLink="about" 
+          <a routerLink="/aboutus" 
              class="btn btn-light btn-lg ml-3">
             Over ons
           </a>
