--- a/src/app/components/activity/activity-details/activity-details.component.html
+++ b/src/app/components/activity/activity-details/activity-details.component.html
@@ -27,7 +27,6 @@
             <div class="col-sm-6 p-5">
               <div class="text-center mb-4">
                 <h1 class="fw-bold text-primary">{{ event?.title }}</h1>
-                <p class="text-muted fs-5">{{ event?.description }}</p>
               </div>
 
               <div class="details-section">
@@ -43,6 +42,9 @@
                 </div>
                 <div class="detail-item">
                   <strong>Adres en Postcode:</strong> {{ event?.address }}
+                </div>
+                <div class="detail-item">
+                  <strong>Organisator:</strong> {{ event?.organizerName }}
                 </div>
                 <div class="detail-item">
                   
