--- a/src/app/components/activity/activity-create/activity-create.component.html
+++ b/src/app/components/activity/activity-create/activity-create.component.html
@@ -22,7 +22,8 @@
 
             <div class="col-sm-6 p-4">
               <div class="text-center">
-                <h2 class="fw-light">Maak hier uw eigen evenement aan</h2>
+                <h2 class=""
+                style="font-weight: bold; color: #3E7056; margin-bottom: 1.5rem;">Maak hier uw eigen evenement aan</h2>
                 <p class="mb-4 text-muted">Vul de details van uw evenement in.</p>
               </div>
 
@@ -127,6 +128,7 @@
                   <button
                     type="submit"
                     class="btn btn-primary btn-lg"
+                    style="background-color: #3E7056;"
                     [disabled]="!activityForm.valid"
                   >
                     Maak evenement aan
