--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="d-flex flex-wrap align-items-center justify-content-between">
       <a routerLink="" class="d-flex align-items-center mb-2 mb-lg-0 text-decoration-none text-body" li class="nav-item" style="border-right: 1px solid rgba(255, 255, 255, 0.5); padding-right: 15px; margin-right: 15px;">
-        <img src="https://www.adaptivewfs.com/wp-content/uploads/2020/07/logo-placeholder-image.png" alt="Logo" width="70" height="70" class="me-2">
+        <img src="../../../assets/Schermafbeelding_2025-01-21_224439-removebg-preview.png" alt="Logo" width="85" height="85" class="me-2">
       </a>
 
       <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
