--- a/src/app/components/activity/activity-details/activity-details.component.html
+++ b/src/app/components/activity/activity-details/activity-details.component.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="detail-item">
                   <strong>Mogelijke Kosten:</strong>
-                  {{ event?.cost }}
+                  €{{ event?.cost }}
                 </div>
                 <div class="detail-item">
                   <strong>Adres en Postcode:</strong> {{ event?.address }}
